// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`StructuredText > with a dast including a sprinkle of everything > with default rules > renders the document 1`] = `
<body>
  <div />
  <div />
  <div />
  <div />
  <div />
  <div>
    <h1>
      This is a 
      
      <!--&lt;Lines&gt;-->
      
      <!--&lt;Span&gt;-->
      
      
      
      <!--&lt;Node&gt;-->
      <mark>
        title
        
        <!--&lt;Lines&gt;-->
        
        <!--&lt;Span&gt;-->
      </mark>
      
      
      <!--&lt;Span&gt;-->
      
      
      
      <!--&lt;Node&gt;-->
      .
      
      <!--&lt;Lines&gt;-->
      
      <!--&lt;Span&gt;-->
      
      
      
      <!--&lt;Node&gt;-->
      
      
    </h1>
    
    <!--&lt;Heading&gt;-->
    
    
    
    <!--&lt;Node&gt;-->
    <p>
      And it's fucking perfect.
      
      <!--&lt;Lines&gt;-->
      
      <!--&lt;Span&gt;-->
      
      
      
      <!--&lt;Node&gt;-->
      
      
    </p>
    <!--&lt;Paragraph&gt;-->
    
    
    
    <!--&lt;Node&gt;-->
    <h2>
      Seriously, what the fuck else do you want?
      
      <!--&lt;Lines&gt;-->
      
      <!--&lt;Span&gt;-->
      
      
      
      <!--&lt;Node&gt;-->
      
      
    </h2>
    
    <!--&lt;Heading&gt;-->
    
    
    
    <!--&lt;Node&gt;-->
    <p>
      You probably build websites and think your 💩  is special.
      <br />
      You think your 13 megabyte parallax-ative home page is going to get you
      
      <!--&lt;Lines&gt;-->
      
      <!--&lt;Lines&gt;-->
      
      <!--&lt;Span&gt;-->
      
      
      
      <!--&lt;Node&gt;-->
      <strong>
         some fucking Awwward banner y
        
        <!--&lt;Lines&gt;-->
        
        <!--&lt;Span&gt;-->
      </strong>
      
      
      <!--&lt;Span&gt;-->
      
      
      
      <!--&lt;Node&gt;-->
      ou can glue to the top corner of your site. You think your 40-pound jQuery file and 83 polyfills give IE7 a boner because it finally has box-shadow. Wrong, motherfucker. Let me describe your perfect-ass website:
      
      <!--&lt;Lines&gt;-->
      
      <!--&lt;Span&gt;-->
      
      
      
      <!--&lt;Node&gt;-->
      
      
    </p>
    <!--&lt;Paragraph&gt;-->
    
    
    
    <!--&lt;Node&gt;-->
    <ul>
      <li>
        <p>
          Shit's lightweight and loads fast
          
          <!--&lt;Lines&gt;-->
          
          <!--&lt;Span&gt;-->
          
          
          
          <!--&lt;Node&gt;-->
          
          
        </p>
        <!--&lt;Paragraph&gt;-->
        
        
        
        <!--&lt;Node&gt;-->
        <ul>
          <li>
            <p>
              Looks the same in all your shitty browsers
              
              <!--&lt;Lines&gt;-->
              
              <!--&lt;Span&gt;-->
              
              
              
              <!--&lt;Node&gt;-->
              
              
            </p>
            <!--&lt;Paragraph&gt;-->
            
            
            
            <!--&lt;Node&gt;-->
            
            
          </li>
          <!--&lt;ListItem&gt;-->
          
          
          
          <!--&lt;Node&gt;-->
          <li>
            <p>
              Fits on all your shitty screens
              
              <!--&lt;Lines&gt;-->
              
              <!--&lt;Span&gt;-->
              
              
              
              <!--&lt;Node&gt;-->
              
              
            </p>
            <!--&lt;Paragraph&gt;-->
            
            
            
            <!--&lt;Node&gt;-->
            <ul>
              <li>
                <p>
                  The motherfucker's accessible to every asshole that visits your site
                  
                  <!--&lt;Lines&gt;-->
                  
                  <!--&lt;Span&gt;-->
                  
                  
                  
                  <!--&lt;Node&gt;-->
                  
                  
                </p>
                <!--&lt;Paragraph&gt;-->
                
                
                
                <!--&lt;Node&gt;-->
                
                
              </li>
              <!--&lt;ListItem&gt;-->
              
              
              
              <!--&lt;Node&gt;-->
              
              
            </ul>
            
            <!--&lt;List&gt;-->
            
            
            
            <!--&lt;Node&gt;-->
            
            
          </li>
          <!--&lt;ListItem&gt;-->
          
          
          
          <!--&lt;Node&gt;-->
          
          
        </ul>
        
        <!--&lt;List&gt;-->
        
        
        
        <!--&lt;Node&gt;-->
        
        
      </li>
      <!--&lt;ListItem&gt;-->
      
      
      
      <!--&lt;Node&gt;-->
      <li>
        <p>
          Shit's legible and gets your fucking point across (if you had one instead of just 5mb pics of hipsters drinking coffee)
          
          <!--&lt;Lines&gt;-->
          
          <!--&lt;Span&gt;-->
          
          
          
          <!--&lt;Node&gt;-->
          
          
        </p>
        <!--&lt;Paragraph&gt;-->
        
        
        
        <!--&lt;Node&gt;-->
        
        
      </li>
      <!--&lt;ListItem&gt;-->
      
      
      
      <!--&lt;Node&gt;-->
      
      
    </ul>
    
    <!--&lt;List&gt;-->
    
    
    
    <!--&lt;Node&gt;-->
    <h3>
      Well guess what, motherfucker:
      
      <!--&lt;Lines&gt;-->
      
      <!--&lt;Span&gt;-->
      
      
      
      <!--&lt;Node&gt;-->
      
      
    </h3>
    
    <!--&lt;Heading&gt;-->
    
    
    
    <!--&lt;Node&gt;-->
    <p>
      You. Are. Over-designing. Look at this shit. It's a motherfucking website. Why the fuck do you need to animate a fucking trendy-ass banner flag when I hover over that useless piece of shit? You spent hours on it and added 80 kilobytes to your fucking site, and some motherfucker jabbing at it on their iPad with fat sausage fingers will never see that shit. Not to mention blind people will never see that shit, but they don't see any of your shitty shit.
      
      <!--&lt;Lines&gt;-->
      
      <!--&lt;Span&gt;-->
      
      
      
      <!--&lt;Node&gt;-->
      
      
    </p>
    <!--&lt;Paragraph&gt;-->
    
    
    
    <!--&lt;Node&gt;-->
    <p>
      You never knew it, but this is your perfect website. Here's why.
      
      <!--&lt;Lines&gt;-->
      
      <!--&lt;Span&gt;-->
      
      
      
      <!--&lt;Node&gt;-->
      
      
    </p>
    <!--&lt;Paragraph&gt;-->
    
    
    
    <!--&lt;Node&gt;-->
    <h2>
      It's fucking lightweight
      
      <!--&lt;Lines&gt;-->
      
      <!--&lt;Span&gt;-->
      
      
      
      <!--&lt;Node&gt;-->
      
      
    </h2>
    
    <!--&lt;Heading&gt;-->
    
    
    
    <!--&lt;Node&gt;-->
    <p>
      This entire page weighs less than the gradient-meshed facebook logo on your fucking Wordpress site. Did you seriously load 100kb of jQuery UI just so you could animate the fucking background color of a div? You loaded all 7 fontfaces of a shitty webfont just so you could say "Hi." at 100px height at the beginning of your site? 
      
      <!--&lt;Lines&gt;-->
      
      <!--&lt;Span&gt;-->
      
      
      
      <!--&lt;Node&gt;-->
      
      
    </p>
    <!--&lt;Paragraph&gt;-->
    
    
    
    <!--&lt;Node&gt;-->
    <p>
      You piece of shit.
      
      <!--&lt;Lines&gt;-->
      
      <!--&lt;Span&gt;-->
      
      
      
      <!--&lt;Node&gt;-->
      
      
    </p>
    <!--&lt;Paragraph&gt;-->
    
    
    
    <!--&lt;Node&gt;-->
    <ul>
      <li>
        <p>
          
          <!--&lt;InlineItem&gt;-->
          
          
          
          <!--&lt;Node&gt;-->
          
          <!--&lt;ItemLink&gt;-->
          
          
          
          <!--&lt;Node&gt;-->
          
          
        </p>
        <!--&lt;Paragraph&gt;-->
        
        
        
        <!--&lt;Node&gt;-->
        
        
      </li>
      <!--&lt;ListItem&gt;-->
      
      
      
      <!--&lt;Node&gt;-->
      <li>
        <p>
          
          
          <!--&lt;Lines&gt;-->
          
          <!--&lt;Span&gt;-->
          
          
          
          <!--&lt;Node&gt;-->
          
          
        </p>
        <!--&lt;Paragraph&gt;-->
        
        
        
        <!--&lt;Node&gt;-->
        
        
      </li>
      <!--&lt;ListItem&gt;-->
      
      
      
      <!--&lt;Node&gt;-->
      
      
    </ul>
    
    <!--&lt;List&gt;-->
    
    
    
    <!--&lt;Node&gt;-->
    
    <!--&lt;Block&gt;-->
    
    
    
    <!--&lt;Node&gt;-->
    <h2>
      It's responsive
      
      <!--&lt;Lines&gt;-->
      
      <!--&lt;Span&gt;-->
      
      
      
      <!--&lt;Node&gt;-->
      
      
    </h2>
    
    <!--&lt;Heading&gt;-->
    
    
    
    <!--&lt;Node&gt;-->
    <p>
      You dumbass. You thought you needed media queries to be responsive, but no. Responsive means that it responds to whatever motherfucking screensize it's viewed on. This site doesn't care if you're on an iMac or a motherfucking Tamagotchi.
      
      <!--&lt;Lines&gt;-->
      
      <!--&lt;Span&gt;-->
      
      
      
      <!--&lt;Node&gt;-->
      
      
    </p>
    <!--&lt;Paragraph&gt;-->
    
    
    
    <!--&lt;Node&gt;-->
    <h2>
      It fucking works
      
      <!--&lt;Lines&gt;-->
      
      <!--&lt;Span&gt;-->
      
      
      
      <!--&lt;Node&gt;-->
      
      
    </h2>
    
    <!--&lt;Heading&gt;-->
    
    
    
    <!--&lt;Node&gt;-->
    <p>
      Look at this shit. You can read it ... that is, if you can read, motherfucker. It makes sense. It has motherfucking hierarchy. It's using HTML5 tags so you and your bitch-ass browser know what the fuck's in this fucking site. That's semantics, motherfucker.
      
      <!--&lt;Lines&gt;-->
      
      <!--&lt;Span&gt;-->
      
      
      
      <!--&lt;Node&gt;-->
      
      
    </p>
    <!--&lt;Paragraph&gt;-->
    
    
    
    <!--&lt;Node&gt;-->
    <p>
      It has content on the fucking screen. Your site has three bylines and link to your dribbble account, but you spread it over 7 full screens and make me click some bobbing button to show me how cool the jQuery ScrollTo plugin is.
      
      <!--&lt;Lines&gt;-->
      
      <!--&lt;Span&gt;-->
      
      
      
      <!--&lt;Node&gt;-->
      
      
    </p>
    <!--&lt;Paragraph&gt;-->
    
    
    
    <!--&lt;Node&gt;-->
    <p>
      Cross-browser compatibility? Load this motherfucker in IE6. I fucking dare you.
      
      <!--&lt;Lines&gt;-->
      
      <!--&lt;Span&gt;-->
      
      
      
      <!--&lt;Node&gt;-->
      
      
    </p>
    <!--&lt;Paragraph&gt;-->
    
    
    
    <!--&lt;Node&gt;-->
    <h2>
      This is a website. 
      
      <!--&lt;Lines&gt;-->
      
      <!--&lt;Span&gt;-->
      
      
      
      <!--&lt;Node&gt;-->
      <mark>
        Look at it.
        
        <!--&lt;Lines&gt;-->
        
        <!--&lt;Span&gt;-->
      </mark>
      
      
      <!--&lt;Span&gt;-->
      
      
      
      <!--&lt;Node&gt;-->
       You've never seen one before.
      
      <!--&lt;Lines&gt;-->
      
      <!--&lt;Span&gt;-->
      
      
      
      <!--&lt;Node&gt;-->
      
      
    </h2>
    
    <!--&lt;Heading&gt;-->
    
    
    
    <!--&lt;Node&gt;-->
    <p>
      Like the man who's never grown out his beard has no idea what his true natural state is, you have no fucking idea what a website is. All you have ever seen are shitty skeuomorphic bastardizations of what should be text communicating a fucking message. This is a real, naked website. Look at it. It's fucking beautiful.
      
      <!--&lt;Lines&gt;-->
      
      <!--&lt;Span&gt;-->
      
      
      
      <!--&lt;Node&gt;-->
      
      
    </p>
    <!--&lt;Paragraph&gt;-->
    
    
    
    <!--&lt;Node&gt;-->
    <h3>
      Yes, this is fucking satire, you fuck
      
      <!--&lt;Lines&gt;-->
      
      <!--&lt;Span&gt;-->
      
      
      
      <!--&lt;Node&gt;-->
      
      
    </h3>
    
    <!--&lt;Heading&gt;-->
    
    
    
    <!--&lt;Node&gt;-->
    <p>
      I'm not actually saying your shitty site should look like this. What I'm saying is that all the problems we have with websites are ones we create ourselves. Websites aren't broken by default, they are functional, high-performing, and accessible. You break them. You son-of-a-bitch.
      
      <!--&lt;Lines&gt;-->
      
      <!--&lt;Span&gt;-->
      
      
      
      <!--&lt;Node&gt;-->
      
      
    </p>
    <!--&lt;Paragraph&gt;-->
    
    
    
    <!--&lt;Node&gt;-->
    <blockquote>
      <p>
        "Good design is as little design as possible." 
        
        <!--&lt;Lines&gt;-->
        
        <!--&lt;Span&gt;-->
        
        
        
        <!--&lt;Node&gt;-->
        
        
      </p>
      <!--&lt;Paragraph&gt;-->
      
      
      
      <!--&lt;Node&gt;-->
      
      
    </blockquote>
    <!--&lt;Blockquote&gt;-->
    
    
    
    <!--&lt;Node&gt;-->
    <h2>
      Epilogue
      
      <!--&lt;Lines&gt;-->
      
      <!--&lt;Span&gt;-->
      
      
      
      <!--&lt;Node&gt;-->
      
      
    </h2>
    
    <!--&lt;Heading&gt;-->
    
    
    
    <!--&lt;Node&gt;-->
    <p>
      From the philosophies expressed (poorly) above, 
      
      <!--&lt;Lines&gt;-->
      
      <!--&lt;Span&gt;-->
      
      
      
      <!--&lt;Node&gt;-->
      <a
        href="http://txti.es"
        rel="nofollow"
        target="_blank"
      >
        txti
        
        <!--&lt;Lines&gt;-->
        
        <!--&lt;Span&gt;-->
        
        
        
        <!--&lt;Node&gt;-->
        
        
      </a>
      <!--&lt;Link&gt;-->
      
      
      
      <!--&lt;Node&gt;-->
       was created. You should try it today to make your own motherfucking websites.
      
      <!--&lt;Lines&gt;-->
      
      <!--&lt;Span&gt;-->
      
      
      
      <!--&lt;Node&gt;-->
      
      
    </p>
    <!--&lt;Paragraph&gt;-->
    
    
    
    <!--&lt;Node&gt;-->
    
    
    <!--&lt;Root&gt;-->
    
    
    
    <!--&lt;Node&gt;-->
    
    <!--&lt;StructuredText&gt;-->
  </div>
</body>
`;

exports[`StructuredText > with a dast including links and blocks > with default rules > renders the document 1`] = `
<body>
  <div>
    <h1>
      This is a
      
      <!--&lt;Lines&gt;-->
      
      <!--&lt;Span&gt;-->
      
      
      
      <!--&lt;Node&gt;-->
      <mark>
        title
        
        <!--&lt;Lines&gt;-->
        
        <!--&lt;Span&gt;-->
      </mark>
      
      
      <!--&lt;Span&gt;-->
      
      
      
      <!--&lt;Node&gt;-->
      <a
        href="/docs/how-to-code"
      >
        How to code
      </a>
      ;
      
      <!--&lt;InlineItem&gt;-->
      
      
      
      <!--&lt;Node&gt;-->
      <a
        href="/docs/how-to-code"
        target="_blank"
      >
        here!
        
        <!--&lt;Lines&gt;-->
        
        <!--&lt;Span&gt;-->
        
        
        
        <!--&lt;Node&gt;-->
        
        
      </a>
      
      <!--&lt;ItemLink&gt;-->
      
      
      
      <!--&lt;Node&gt;-->
      
      
    </h1>
    
    <!--&lt;Heading&gt;-->
    
    
    
    <!--&lt;Node&gt;-->
    <figure>
      <blockquote>
        Foo bar.
      </blockquote>
       
      <figcaption>
        Mark Smith
      </figcaption>
    </figure>
    
    <!--&lt;Block&gt;-->
    
    
    
    <!--&lt;Node&gt;-->
    
    
    <!--&lt;Root&gt;-->
    
    
    
    <!--&lt;Node&gt;-->
    
    <!--&lt;StructuredText&gt;-->
  </div>
</body>
`;

exports[`StructuredText > with a dast including links and blocks > with missing blocks > raises an error 1`] = `[Error: The Structured Text document contains a 'block' node, but cannot find a record with ID 456 inside data.blocks!]`;

exports[`StructuredText > with a dast including links and blocks > with missing component for blocks > raises an error 1`] = `[Error: The Structured Text document contains a 'block' node, but no component for rendering is specified!]`;

exports[`StructuredText > with a dast including links and blocks > with missing component for inline items > raises an error 1`] = `[Error: The Structured Text document contains an 'inlineItem' node, but no component for rendering is specified!]`;

exports[`StructuredText > with a dast including links and blocks > with missing component for item links > raises an error 1`] = `[Error: The Structured Text document contains an 'itemLink' node, but no component for rendering is specified!]`;

exports[`StructuredText > with a dast including links and blocks > with missing links > raises an error 1`] = `[Error: The Structured Text document contains an 'itemLink' node, but cannot find a record with ID 123 inside data.links!]`;

exports[`StructuredText > with a dast which has a link inside > with default rules > renders the document 1`] = `
<body>
  <div>
    <p>
      This is a paragraph with a 
      
      <!--&lt;Lines&gt;-->
      
      <!--&lt;Span&gt;-->
      
      
      
      <!--&lt;Node&gt;-->
      <a
        href="https://random.link"
        rel="nofollow"
        target="_blank"
      >
        very cool link
        
        <!--&lt;Lines&gt;-->
        
        <!--&lt;Span&gt;-->
        
        
        
        <!--&lt;Node&gt;-->
        
        
      </a>
      <!--&lt;Link&gt;-->
      
      
      
      <!--&lt;Node&gt;-->
      . And the link has the target and the rel attributes set.
      
      <!--&lt;Lines&gt;-->
      
      <!--&lt;Span&gt;-->
      
      
      
      <!--&lt;Node&gt;-->
      
      
    </p>
    <!--&lt;Paragraph&gt;-->
    
    
    
    <!--&lt;Node&gt;-->
    
    
    <!--&lt;Root&gt;-->
    
    
    
    <!--&lt;Node&gt;-->
    
    <!--&lt;StructuredText&gt;-->
  </div>
</body>
`;

exports[`StructuredText > with a dast with no links nor blocks > with custom rules > renders the document 1`] = `
<body>
  <div>
    <h2>
      This
      <br />
      is a 
      
      <!--&lt;Lines&gt;-->
      
      <!--&lt;Lines&gt;-->
      
      <!--&lt;Span&gt;-->
      
      
      
      <!--&lt;Node&gt;-->
      <strong>
        title
        
        <!--&lt;Lines&gt;-->
        
        <!--&lt;Span&gt;-->
      </strong>
      
      
      <!--&lt;Span&gt;-->
      
      
      
      <!--&lt;Node&gt;-->
      
      
    </h2>
    
    <!--&lt;IncreasedLevelHeading&gt;-->
    
    
    
    <!--&lt;Node&gt;-->
    
    
    <!--&lt;Root&gt;-->
    
    
    
    <!--&lt;Node&gt;-->
    
    <!--&lt;StructuredText&gt;-->
  </div>
</body>
`;

exports[`StructuredText > with a dast with no links nor blocks > with default rules > renders the document 1`] = `
<body>
  <div>
    <h1>
      This
      <br />
      is a 
      
      <!--&lt;Lines&gt;-->
      
      <!--&lt;Lines&gt;-->
      
      <!--&lt;Span&gt;-->
      
      
      
      <!--&lt;Node&gt;-->
      <strong>
        title
        
        <!--&lt;Lines&gt;-->
        
        <!--&lt;Span&gt;-->
      </strong>
      
      
      <!--&lt;Span&gt;-->
      
      
      
      <!--&lt;Node&gt;-->
      
      
    </h1>
    
    <!--&lt;Heading&gt;-->
    
    
    
    <!--&lt;Node&gt;-->
    
    
    <!--&lt;Root&gt;-->
    
    
    
    <!--&lt;Node&gt;-->
    
    <!--&lt;StructuredText&gt;-->
  </div>
</body>
`;

exports[`StructuredText > with a very simple dast > with custom mark rules > renders the document 1`] = `
<body>
  <div>
    <h1>
      This
      <br />
      is a 
      
      <!--&lt;Lines&gt;-->
      
      <!--&lt;Lines&gt;-->
      
      <!--&lt;CustomSpan&gt;-->
      
      
      
      <!--&lt;Node&gt;-->
      <b>
        title
        
        <!--&lt;Lines&gt;-->
        
        <!--&lt;CustomSpan&gt;-->
      </b>
      
      
      <!--&lt;CustomSpan&gt;-->
      
      
      
      <!--&lt;Node&gt;-->
      
      
    </h1>
    
    <!--&lt;Heading&gt;-->
    
    
    
    <!--&lt;Node&gt;-->
    
    
    <!--&lt;Root&gt;-->
    
    
    
    <!--&lt;Node&gt;-->
    
    <!--&lt;StructuredText&gt;-->
  </div>
</body>
`;

exports[`StructuredText > with a very simple dast > with default rules > renders the document 1`] = `
<body>
  <div>
    <h1>
      This
      <br />
      is a 
      
      <!--&lt;Lines&gt;-->
      
      <!--&lt;Lines&gt;-->
      
      <!--&lt;Span&gt;-->
      
      
      
      <!--&lt;Node&gt;-->
      <strong>
        title
        
        <!--&lt;Lines&gt;-->
        
        <!--&lt;Span&gt;-->
      </strong>
      
      
      <!--&lt;Span&gt;-->
      
      
      
      <!--&lt;Node&gt;-->
      
      
    </h1>
    
    <!--&lt;Heading&gt;-->
    
    
    
    <!--&lt;Node&gt;-->
    
    
    <!--&lt;Root&gt;-->
    
    
    
    <!--&lt;Node&gt;-->
    
    <!--&lt;StructuredText&gt;-->
  </div>
</body>
`;

exports[`StructuredText > with a very simple pure dast (only the \`value\` of a structured text) > with custom mark rules > renders the document 1`] = `
<body>
  <div>
    <h1>
      This
      <br />
      is a 
      
      <!--&lt;Lines&gt;-->
      
      <!--&lt;Lines&gt;-->
      
      <!--&lt;CustomSpan&gt;-->
      
      
      
      <!--&lt;Node&gt;-->
      <b>
        title
        
        <!--&lt;Lines&gt;-->
        
        <!--&lt;CustomSpan&gt;-->
      </b>
      
      
      <!--&lt;CustomSpan&gt;-->
      
      
      
      <!--&lt;Node&gt;-->
      
      
    </h1>
    
    <!--&lt;Heading&gt;-->
    
    
    
    <!--&lt;Node&gt;-->
    
    
    <!--&lt;Root&gt;-->
    
    
    
    <!--&lt;Node&gt;-->
    
    <!--&lt;StructuredText&gt;-->
  </div>
</body>
`;

exports[`StructuredText > with a very simple pure dast (only the \`value\` of a structured text) > with default rules > renders the document 1`] = `
<body>
  <div>
    <h1>
      This
      <br />
      is a 
      
      <!--&lt;Lines&gt;-->
      
      <!--&lt;Lines&gt;-->
      
      <!--&lt;Span&gt;-->
      
      
      
      <!--&lt;Node&gt;-->
      <strong>
        title
        
        <!--&lt;Lines&gt;-->
        
        <!--&lt;Span&gt;-->
      </strong>
      
      
      <!--&lt;Span&gt;-->
      
      
      
      <!--&lt;Node&gt;-->
      
      
    </h1>
    
    <!--&lt;Heading&gt;-->
    
    
    
    <!--&lt;Node&gt;-->
    
    
    <!--&lt;Root&gt;-->
    
    
    
    <!--&lt;Node&gt;-->
    
    <!--&lt;StructuredText&gt;-->
  </div>
</body>
`;

exports[`StructuredText > with no value > renders null 1`] = `
<body>
  <div>
    
    <!--&lt;StructuredText&gt;-->
  </div>
</body>
`;
